feat(*): Dynamic special user attr
Special user attribute is series kinds of point that change over time.

This commit add support for parsing dynamic special attr including:

* 龙之印章
* 西瓜

Now special attr is **NOT** translated in app.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -219,8 +219,7 @@
       "publicity": "Publicity",
       "natural": "Natural",
       "scheming": "Scheming",
-      "spirit": "Spirit",
-      "seal": "Seal"
+      "spirit": "Spirit"
     }
   },
   "forumPage": {
@@ -469,7 +468,6 @@
       "natural": "Natural",
       "scheming": "Scheming",
       "spirit": "Spirit",
-      "seal": "Seal",
       "cp": "CP",
       "privilege": "Privilege",
       "registration": "Registration",
