--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -219,8 +219,7 @@
       "publicity": "宣传",
       "natural": "天然",
       "scheming": "腹黑",
-      "spirit": "精灵",
-      "seal": "龙之印章"
+      "spirit": "精灵"
     }
   },
   "forumPage": {
@@ -469,7 +468,6 @@
       "natural": "天然",
       "scheming": "腹黑",
       "spirit": "精灵",
-      "seal": "龙之印章",
       "cp": "CP",
       "privilege": "阅读权限",
       "registration": "注册时间",
