fix(i18n): Fix login button text in en

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -148,7 +148,7 @@
   },
   "loginPage": {
     "title": "Login TSDM",
-    "login": "TSDM",
+    "login": "Login",
     "username": "Username",
     "usernameEmpty": "Username should not be empty",
     "password": "Password",
