chore(*): Update app description

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -116,7 +116,7 @@
   "aboutPage": {
     "title": "About",
     "whatIsThis": "What's This",
-    "description": "Cross-platform unofficial client for TSDM forum",
+    "description": "Third-party cross-platform client for TSDM forum",
     "packageName": "Package Name",
     "forumHomepage": "Forum Homepage",
     "homepage": "App Homepage",
