--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -116,7 +116,7 @@
   "aboutPage": {
     "title": "关于",
     "whatIsThis": "这是？",
-    "description": "跨平台的天使动漫论坛非官方客户端",
+    "description": "天使动漫论坛第三方跨平台客户端",
     "packageName": "包名",
     "forumHomepage": "论坛主页",
     "homepage": "软件主页",
