feat(home): Delete legacy v0 data

--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -558,5 +558,11 @@
     "copyImageUrl": "复制图片链接",
     "reloadImage": "重新加载图片",
     "openLink": "打开链接"
+  },
+  "init": {
+    "v1DeleteLegacyData": {
+      "title": "旧数据已清除",
+      "detail": "此应用似乎刚从低于1.0的版本升级上来，用户登录数据和设置偏好已不可使用，现已清除。\n您可能需要再登录一次并重新设置偏好，抱歉给您带来不便。"
+    }
   }
 }
