--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -558,5 +558,11 @@
     "copyImageUrl": "複製圖片連結",
     "reloadImage": "重新載入圖片",
     "openLink": "開啟連結"
+  },
+    "init": {
+      "v1DeleteLegacyData": {
+        "title": "舊資料已清除",
+        "detail": "此應用程式似乎剛從低於1.0的版本升級上來，使用者登入資料和設定偏好已不可用，現已清除。\n您可能需要再登入一次並重新設定偏好，抱歉給您帶來不便。"
+      }
   }
 }
