feat(post): Support copy share link

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -498,7 +498,8 @@
         "online": "Online",
         "offline": "Offline"
       }
-    }
+    },
+    "share": "Copy share link"
   },
   "packetCard": {
     "title": "You found a packet!",
