--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -69,6 +69,7 @@
         "infoRowAlignCenter": "信息居中排列",
         "showLastReplyAuthor": "显示最后回复的用户的名字",
         "highlightRecentThread": "高亮显示近期发布的帖子",
+        "highlightAuthorName": "高亮帖子作者的用户名",
         "example": {
           "title": "TV动画《魔法禁书目录》第四季制作决定！",
           "author": "茵蒂克丝",
