--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -396,13 +396,25 @@
     "threadTitle": "帖子标题",
     "body": "正文",
     "additionalOptions": "附加选项",
-    "saveAndBack": "保存并返回",
+    "publish": "发布",
     "failedToLoadData": "无法加载数据",
     "threadTypeShouldNotBeEmpty": "分类不能为空",
     "titleShouldNotBeEmpty": "标题不能为空",
     "titleTooLong": "标题太长",
     "threadBodyTooShort": "正文太短",
-    "editSuccess": "编辑成功"
+    "editSuccess": "编辑成功",
+    "saveAsDraft": "保存草稿",
+    "threadPublish": {
+      "title": "发布新帖",
+      "warningBeforePost": {
+        "body(rich)": "请在发布新帖前检查以下信息:\n1. 发帖所在分区：$forumName\n2. 我已阅读版规。\n3. 标题: $threadTitle\n4. 正文满足最少字数要求。\n5. 帖子分类正确: $threadType\n\n$warning",
+        "warning": "违反版规将会收到提醒、警告、扣分甚至禁言"
+      },
+      "afterPostDialog": {
+        "title": "发布成功",
+        "message": "想跳转到新帖子吗？"
+      }
+    }
   },
   "chatHistoryPage": {
     "title": "交谈记录",
@@ -588,13 +600,6 @@
     "v1DeleteLegacyData": {
       "title": "旧数据已清除",
       "detail": "此应用似乎刚从低于1.0的版本升级上来，用户登录数据和设置偏好已不可使用，现已清除。\n您可能需要再登录一次并重新设置偏好，抱歉给您带来不便。"
-    }
-  },
-  "threadPublishPage": {
-    "title": "发布新帖",
-    "warningBeforePost": {
-      "body(rich)": "请在发布新帖前检查以下信息:\n1. 发帖所在分区：$forumName\n2. 我已阅读版规。\n 3. 标题: $threadTitle\n3. 正文满足最少字数要求。\n4. 帖子分类正确: $threadType\n $warning",
-      "warning": "违反版规将会收到提醒、警告、扣分甚至禁言"
     }
   }
 }
