feat(*): Update card style

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -355,7 +355,8 @@
     },
     "replyTab": {
       "title": "ReplyThread"
-    }
+    },
+    "forum": "Forum"
   },
   "latestThreadPage": {
     "title": "Latest Thread"
