--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -355,7 +355,8 @@
     },
     "replyTab": {
       "title": "回复"
-    }
+    },
+    "forum": "分区"
   },
   "latestThreadPage": {
     "title": "最新主题"
