--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -355,7 +355,8 @@
     },
     "replyTab": {
       "title": "回覆"
-    }
+    },
+    "forum": "分區"
   },
   "latestThreadPage": {
     "title": "最新主題"
