--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -71,6 +71,7 @@
         "showLastReplyAuthor": "顯示最後回覆的使用者的名字",
         "highlightRecentThread": "突出顯示顯示近期發佈的貼文",
         "highlightAuthorName": "突出顯示貼文作者的使用者名稱",
+        "highlightInfoRow": "高亮顯示貼文資訊",
         "example": {
           "title": "TV動畫《魔法禁書目錄》第四季製作決定！",
           "author": "茵蒂克絲",
