feat(thread): Show thread draft state on top of thread page

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -299,7 +299,8 @@
     "closed": "Thread is closed",
     "needLogin": "Need login",
     "replySuccess": "Reply success",
-    "replyFailed": "Failed to reply: $err"
+    "replyFailed": "Failed to reply: $err",
+    "draft": "Draft"
   },
   "noticePage": {
     "title": "Notifications",
