--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -417,6 +417,9 @@
         "title": "發佈成功",
         "message": "想跳到新貼文嗎？"
       }
+    },
+    "permDialog": {
+      "title": "設定讀取權限"
     }
   },
   "chatHistoryPage": {
