--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -616,5 +616,10 @@
       "title": "旧数据已清除",
       "detail": "此应用似乎刚从低于1.0的版本升级上来，用户登录数据和设置偏好已不可使用，现已清除。\n您可能需要再登录一次并重新设置偏好，抱歉给您带来不便。"
     }
+  },
+  "html": {
+    "newcomerReportCard": {
+      "title": "详细信息"
+    }
   }
 }
