feat(*): parse and show packet all taken away state

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -555,7 +555,8 @@
     "share": "Copy share link"
   },
   "packetCard": {
-    "title": "You found a packet!",
+    "title": "Packet",
+    "detail": "You found a packet!",
     "open": "Open It",
     "failedToOpen": "Failed to open",
     "allTakenAway": "All packets were taken away"
@@ -627,5 +628,9 @@
     "newcomerReportCard": {
       "title": "Detail Info"
     }
+  },
+  "musicCard": {
+    "title": "Music",
+    "openLink": "Open link"
   }
 }
