feat(authentication): show sign up redirect button in login screen

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -204,7 +204,8 @@
       "username": "Username",
       "uid": "UID",
       "email": "Email"
-    }
+    },
+    "signUpHint": "Do not have an account? Sign up here"
   },
   "rootPage": {
     "initFailed": "Init failed: $err",
