feat(history): complete thread visit history page
* UI and data can be improved.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -633,5 +633,9 @@
   "musicCard": {
     "title": "Music",
     "openLink": "Open link"
+  },
+  "threadVisitHistoryPage": {
+    "entryTooltip": "Thread browsing history",
+    "title": "Thread browsing history"
   }
 }
