--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -633,5 +633,9 @@
   "musicCard": {
     "title": "音樂",
     "openLink": "開啟連結"
+  },
+  "threadVisitHistoryPage": {
+    "entryTooltip": "貼文瀏覽紀錄",
+    "title": "貼文瀏覽紀錄"
   }
 }
