feat(history): add local only history hint

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -636,6 +636,7 @@
   },
   "threadVisitHistoryPage": {
     "entryTooltip": "Thread browsing history",
-    "title": "Thread browsing history"
+    "title": "Thread browsing history",
+    "localOnlyTip": "Only local browsing history was recorded, may be different on web side or other machines"
   }
 }
